[package]
name = "deploy-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-client = "1.18"
solana-sdk = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.3"
base64 = "0.21"
bs58 = "0.5"
